se cambio readme

--- a/Desafio_1.ipynb
+++ b/Desafio_1.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "05b2033d",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "e0348f88",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "a4b61f84",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "e9148d47",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
        "(11314, 101322)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "72e293e4",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "id": "09bc888b",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "b0021137",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "50128163",
    "metadata": {},
    "outputs": [],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "id": "708aaf68",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "id": "9d0670e2",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "id": "271d9874",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "id": "e507f3f3",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "id": "ba8a0ff8",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
    "id": "0d1bf267",
    "metadata": {},
    "source": [
-    "Con la búsqueda de hiperparametros la verdad que no se mejoró mucho el resultado respecto al caso anterior, con solo con StopWords + ComplementNB."
+    "Con la búsqueda de hiperparametros la verdad que no se mejoró mucho el resultado respecto al caso anterior, con solo con StopWords + ComplementNB. De hecho, los parametros que mejor F1  tuvieron fueron los mismos que en el caso anterior: 'tfidf__max_df': 1.0 y 'tfidf__min_df': 1.\n"
    ]
   },
   {
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "86817406",
    "metadata": {},
    "outputs": [
@@ -766,7 +766,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transponiendo la matriz a (palabras, documentos)...\n",
       "Optimización de matriz completada.\n",
       "\n",
       "--- PALABRA OBJETIVO: 'computer' ---\n",
